changes in yarn cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ dotnet: 1.0.1
 services:
 - docker
 cache:
-  yarn: true
+  directories:
+    - $HOME/.cache/yarn
 before_install:
 - nvm install 6.9.1
 - nvm use 6.9.1
