--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,19 @@ services:
 - docker
 cache:
   directories:
-    - $HOME/.cache/yarn
+    - Trappist/src/Promact.Trappist.Web/node_modules
 before_install:
 - nvm install 6.9.1
 - nvm use 6.9.1
-- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.1.0
-- export PATH=$HOME/.yarn/bin:$PATH
+- npm install -g npm
 install:
 - dotnet restore ./Trappist/Trappist.sln
-- cd ./Trappist/src/Promact.Trappist.Web && yarn && cd ../../../
+- cd ./Trappist/src/Promact.Trappist.Web && npm install && cd ../../../
 script:
 - dotnet build ./Trappist/Trappist.sln
 - dotnet test Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
-- cd ./Trappist/src/Promact.Trappist.Web
-- yarn run lint
-- yarn run ngc
-- cd ../../../
+- npm run lint --prefix ./Trappist/src/Promact.Trappist.Web
+- npm run ngc --prefix ./Trappist/src/Promact.Trappist.Web
 deploy:
 - provider: script
   script: chmod +x $TRAVIS_BUILD_DIR/deploy.sh && sh $TRAVIS_BUILD_DIR/deploy.sh
