--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@angular/compiler-cli": "^4.3.0",
     "@angular/platform-server": "^4.3.0",
+    "@types/jasmine": "^2.6.0",
     "@types/node": "^7.0.5",
     "angular2-tinymce": "^2.1.2",
     "codelyzer": "^2.0.0-beta.4",
@@ -56,6 +57,13 @@
     "gulp-typescript": "^3.1.5",
     "gulp-uglify": "^2.1.0",
     "jasmine-core": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-commonjs": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-typescript": "^3.0.7",
     "lite-server": "^2.3.0",
     "rollup": "^0.41.6",
     "rollup-plugin-commonjs": "^8.0.2",
@@ -73,7 +81,7 @@
     "ngc": "gulp ngc",
     "prod": "gulp prod",
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "test": "npm start",
-    "tsc": "tsc"
+    "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
+    "tsc": "tsc && karma start karma.conf.js --single-run"
   }
 }
