--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,19 @@ before_install:
 - nvm install 6.9.1
 - nvm use 6.9.1
 - npm install -g npm
+- export CHROME_BIN=chromium-browser
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 install:
 - dotnet restore ./Trappist/Trappist.sln
 - cd ./Trappist/src/Promact.Trappist.Web && npm install && cd ../../../
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+
 script:
 - dotnet build ./Trappist/Trappist.sln
 - dotnet test Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
 - npm run lint --prefix ./Trappist/src/Promact.Trappist.Web
 - npm run ngc --prefix ./Trappist/src/Promact.Trappist.Web
-- karma start config/karma.conf.js --single-run
+- npm run test_travis
 after_success:
   - cat ./coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 deploy:
