--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -63,6 +63,7 @@
     "karma-commonjs": "^1.0.0",
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-typescript": "^3.0.7",
