--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,13 @@ before_install:
 - nvm install 6.9.1
 - nvm use 6.9.1
 - npm install -g npm
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
+
 install:
 - dotnet restore ./Trappist/Trappist.sln
 - cd ./Trappist/src/Promact.Trappist.Web && npm install && cd ../../../
-
+before_script:
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 script:
 - dotnet build ./Trappist/Trappist.sln
 - dotnet test Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
