--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ dist: trusty
 os: linux
 mono: none
 dotnet: 2.0.0
+language: node_js
+node_js:
+  - 0.8
 services:
 - docker
 before_install:
@@ -21,8 +24,9 @@ script:
 - dotnet test Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
 - npm run lint --prefix ./Trappist/src/Promact.Trappist.Web
 - npm run ngc --prefix ./Trappist/src/Promact.Trappist.Web
-- npm run tsc --prefix ./Trappist/src/Promact.Trappist.Web
-- npm run test --prefix ./Trappist/src/Promact.Trappist.Web
+- npm build ./Trappist/src/Promact.Trappist.Web
+- npm run test_travis --prefix ./Trappist/src/Promact.Trappist.Web
+
 after_success:
   - cat ./coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 deploy:
