--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,7 @@ script:
 - dotnet test Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
 - npm run lint --prefix ./Trappist/src/Promact.Trappist.Web
 - npm run ngc --prefix ./Trappist/src/Promact.Trappist.Web
-- npm test
-- tsc
+- npm run tsc --prefix ./Trappist/src/Promact.Trappist.Web
 - npm run test_travis --prefix ./Trappist/src/Promact.Trappist.Web
 
 after_success:
