--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -62,11 +62,13 @@
     "karma-cli": "^1.0.1",
     "karma-commonjs": "^1.0.0",
     "karma-coverage": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-coveralls": "^1.1.2",
     "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-typescript": "^3.0.7",
+    "karma-remap-istanbul": "^0.6.0",
+    "karma-typescript": "^3.0.8",
     "lite-server": "^2.3.0",
     "rollup": "^0.41.6",
     "rollup-plugin-commonjs": "^8.0.2",
@@ -84,7 +86,7 @@
     "ngc": "gulp ngc",
     "prod": "gulp prod",
     "tsc": "tsc -p ./wwwroot",
-    "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
+    "test": " karma start karma.conf.js\"",
     "test_travis": "./node_modules/.bin/karma start karma.conf.js --single-run"
   }
 }
