--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -91,7 +91,7 @@
     "ngc": "ngc -p ./wwwroot/tsconfig.aot.json",
     "prod": "gulp sass && ng build --app main --prod --aot --output-hash=none --progress=false && ng build --app conduct --prod --aot --output-hash=none --progress=false && ng build --app setup --prod --aot --output-hash=none --progress=false",
     "tsc": "tsc -p ./wwwroot",
-    "test": "./node_modules/.bin/karma start karma.conf.js --single-run",
+    "test": "./node_modules/.bin/karma start karma.conf.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js"
   }
 }
