--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~4.3.0",
+    "@angular/animations": "5.0.0",
     "@angular/cdk": "2.0.0-beta.8",
-    "@angular/common": "~4.3.0",
-    "@angular/compiler": "~4.3.0",
-    "@angular/compiler-cli": "~4.3.0",
-    "@angular/core": "~4.3.0",
-    "@angular/forms": "~4.3.0",
-    "@angular/http": "~4.3.0",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
     "@angular/material": "2.0.0-beta.8",
-    "@angular/platform-browser": "~4.3.0",
-    "@angular/platform-browser-dynamic": "~4.3.0",
-    "@angular/router": "~4.3.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/router": "5.0.0",
     "angular2-infinite-scroll": "^0.3.5",
     "angular2-wizard-fix": "0.2.2",
     "base64-js": "^1.2.1",
@@ -28,21 +28,21 @@
     "ieee754": "^1.1.8",
     "jspdf": "^1.3.3",
     "jspdf-autotable": "^2.3.2",
-    "md2": "0.0.18",
+    "md2": "0.0.28",
     "ng2-ace-editor": "^0.2.3",
     "ng2-charts": "1.5.0",
     "ng2-ckeditor": "^1.1.6",
     "ngx-clipboard": "5.1.0",
     "ngx-popover": "0.0.16",
-    "rxjs": "5.4.2",
+    "rxjs": "5.5.2",
     "screenfull": "^3.3.1",
     "systemjs": "0.19.40",
     "tinymce": "^4.6.4",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.3.0",
-    "@angular/platform-server": "^4.3.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/platform-server": "5.0.0",
     "@aspnet/signalr-client": "^1.0.0-alpha2-final",
     "@types/jasmine": "^2.6.0",
     "@types/node": "^7.0.5",
@@ -80,7 +80,7 @@
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.16.3",
     "tslint": "^4.0.0",
-    "typescript": "2.4.1",
+    "typescript": "2.6.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
