Fixed issues in the client-side

--- a/Trappist/src/Promact.Trappist.Web/appsettings.json
+++ b/Trappist/src/Promact.Trappist.Web/appsettings.json
@@ -10,8 +10,8 @@
       "Microsoft": "Information"
     }
   },
-  "CodeBaseSimulatorServer": "",
-  "CodeBaseSimulatorServerAPIKey": "",
+  "CodeBaseSimulatorServer": "http://35.192.127.31/api/execute",
+  "CodeBaseSimulatorServerAPIKey": "codeserver-ZDD5yjGViNaGBHxnRvT3fIUShjPvX3qr",
   "ExceptionlessKey": "",
   "LogstashIP": ""
 }
