--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -32,10 +32,10 @@
     "md2": "0.0.28",
     "ng2-ace-editor": "^0.2.3",
     "ng2-charts": "1.5.0",
-    "ng2-ckeditor": "^1.1.6",
+    "ng2-ckeditor": "1.1.6",
     "ngx-clipboard": "5.1.0",
     "ngx-popover": "0.0.16",
-    "rxjs": "^5.5.2",
+    "rxjs": "5.5.2",
     "screenfull": "^3.3.1",
     "systemjs": "0.19.40",
     "tinymce": "^4.6.4",
