--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -27,6 +27,8 @@
     "exceljs": "^0.5.1",
     "file-saver": "^1.3.3",
     "ieee754": "^1.1.8",
+    "jspdf": "^1.3.5",
+    "jspdf-autotable": "^2.3.2",
     "md2": "0.0.28",
     "ng2-ace-editor": "^0.2.3",
     "ng2-charts": "1.5.0",
